# paws-foster-dogs

./: README.md  app.py  pets_available_for_fostering.csv  pets_available_for_fostering.pkl  pyproject.toml
src/: logic.py  scrape.py
