[tool.poetry]
name = "paws-foster-dogs"
version = "0.1.0"
description = "An filterable, searchable interface for all the pups available to foster from PAWS Chicago."
authors = ["Joseph Gambino <joe@gam.bingo>"]

[tool.poetry.dependencies]
python = "^3.9"
bs4 = "^0.0.1"
streamlit = "^0.87.0"

[tool.poetry.dev-dependencies]
watchdog = "^2.1.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
